@@ -129,6 +129,11 @@
 #   Add ct_markup_copied.
 #   No convergence necessary.
 
+# Incremented to format 33, by sanda
+#   Add \citation_search_view.
+#   No conversion necessary.
+
+
 # NOTE: The format should also be updated in LYXRC.cpp and
 # in configure.py.
 
@@ -479,5 +484,6 @@ conversions = [
 	[ 29, [remove_use_pixmap_cache]],
 	[ 30, []],
 	[ 31, []],
-	[ 32, []]
+	[ 32, []],
+	[ 33, []]
 ]
